Lab9/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;H:\CSIII\mayflower3.3.7.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;H:\CSIII\Lab9
-d
H:\CSIII\Lab9\doc
-encoding
UTF-8
-charset
UTF-8
H:\CSIII\Lab9\ImprovedArrayList.java
<---- end of javadoc command ---->
Loading source file H:\CSIII\Lab9\ImprovedArrayList.java...
H:\CSIII\Lab9\ImprovedArrayList.java:47: error: illegal start of expression
        if (index == size) { add(obj); return }
                                              ^
H:\CSIII\Lab9\ImprovedArrayList.java:77: error: illegal start of expression
    public boolean contains(Object obj)
    ^
H:\CSIII\Lab9\ImprovedArrayList.java:77: error: ';' expected
    public boolean contains(Object obj)
                           ^
H:\CSIII\Lab9\ImprovedArrayList.java:77: error: ';' expected
    public boolean contains(Object obj)
                                      ^
H:\CSIII\Lab9\ImprovedArrayList.java:91: error: illegal start of expression
    public Object get(int index)
    ^
H:\CSIII\Lab9\ImprovedArrayList.java:91: error: ';' expected
    public Object get(int index)
                     ^
H:\CSIII\Lab9\ImprovedArrayList.java:91: error: ';' expected
    public Object get(int index)
                               ^
H:\CSIII\Lab9\ImprovedArrayList.java:100: error: illegal start of expression
    public boolean isEmpty()
    ^
H:\CSIII\Lab9\ImprovedArrayList.java:100: error: ';' expected
    public boolean isEmpty()
                          ^
H:\CSIII\Lab9\ImprovedArrayList.java:110: error: illegal start of expression
    public Object remove(int index)
    ^
H:\CSIII\Lab9\ImprovedArrayList.java:110: error: ';' expected
    public Object remove(int index)
                        ^
H:\CSIII\Lab9\ImprovedArrayList.java:110: error: ';' expected
    public Object remove(int index)
                                  ^
H:\CSIII\Lab9\ImprovedArrayList.java:120: error: illegal start of expression
    public boolean remove(Object obj)
    ^
H:\CSIII\Lab9\ImprovedArrayList.java:120: error: ';' expected
    public boolean remove(Object obj)
                         ^
H:\CSIII\Lab9\ImprovedArrayList.java:120: error: ';' expected
    public boolean remove(Object obj)
                                    ^
H:\CSIII\Lab9\ImprovedArrayList.java:132: error: illegal start of expression
    public Object set(int index, Object obj)
    ^
H:\CSIII\Lab9\ImprovedArrayList.java:132: error: ';' expected
    public Object set(int index, Object obj)
                     ^
H:\CSIII\Lab9\ImprovedArrayList.java:132: error: ';' expected
    public Object set(int index, Object obj)
                                       ^
H:\CSIII\Lab9\ImprovedArrayList.java:132: error: not a statement
    public Object set(int index, Object obj)
                                        ^
H:\CSIII\Lab9\ImprovedArrayList.java:132: error: ';' expected
    public Object set(int index, Object obj)
                                           ^
H:\CSIII\Lab9\ImprovedArrayList.java:140: error: illegal start of expression
    public int size()
    ^
H:\CSIII\Lab9\ImprovedArrayList.java:140: error: ';' expected
    public int size()
                   ^
H:\CSIII\Lab9\ImprovedArrayList.java:145: error: reached end of file while parsing
}
 ^
23 errors
